--- a/iGraphics.cbp
+++ b/iGraphics.cbp
@@ -17,24 +17,25 @@
 					<Add option="-Wall -fexceptions -g" />
 					<Add directory="." />
 					<Add directory="OpenGL/include" />
-					<Add directory="OpenGL/include/irrKlang" />
+					<Add directory="OpenGL/include/SDL2" />
 				</Compiler>
 				<Linker>
-					<Add option="-static -static-libgcc -static-libstdc++" />
-					<Add library="GLU32" />
-					<Add library="freeglut" />
-					<Add library="OPENGL32" />
-					<Add library="gdi32" />
-					<Add library="winmm" />
-					<Add library="irrKlang" />
+					<Add option="-static-libgcc -static-libstdc++" />
 					<Add directory="OpenGL/lib" />
+					<Add library="mingw32" />
+					<Add library="SDL2main" />
+					<Add library="SDL2" />
+					<Add library="SDL2_mixer" />
+					<Add library="OPENGL32" />
+					<Add library="freeglut" />
+					<Add library="winmm" />					
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="iMain.cpp" />
+		<Unit filename="win-examples/SoundDemo.cpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
