codeblocks sdl issue fixed

--- a/iGraphics_iSound.cbp
+++ b/iGraphics_iSound.cbp
@@ -17,11 +17,15 @@
 					<Add option="-Wall -fexceptions -g" />
 					<Add directory="." />
 					<Add directory="OpenGL/include" />
+					<Add directory="OpenGL/include/SDL2" />
 				</Compiler>
 				<Linker>
 					<Add option="-static-libgcc -static-libstdc++" />
 					<Add directory="OpenGL/lib" />
 					<Add library="mingw32" />
+					<Add library="SDL2main" />
+					<Add library="SDL2" />
+					<Add library="SDL2_mixer" />
 					<Add library="OPENGL32" />
 					<Add library="freeglut" />
 					<Add library="winmm" />					
